crates/pg_syntax/tests/snapshots/postgres_regress/join@139.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t1 VALUES (15, 20);"
---
InsertStmt@0..31
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t1"
  Whitespace@14..15 " "
  SelectStmt@15..29
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..29
      AConst@23..25
        Iconst@23..25 "15"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..29
        Iconst@27..29 "20"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

