crates/pg_syntax/tests/snapshots/postgres_regress/join@140.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t1 VALUES (100, 100);"
---
InsertStmt@0..33
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t1"
  Whitespace@14..15 " "
  SelectStmt@15..31
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..31
      AConst@23..26
        Iconst@23..26 "100"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..31
        Iconst@28..31 "100"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

