crates/pg_syntax/tests/snapshots/postgres_regress/join@141.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t1 VALUES (200, 1000);"
---
InsertStmt@0..34
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t1"
  Whitespace@14..15 " "
  SelectStmt@15..32
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..32
      AConst@23..26
        Iconst@23..26 "200"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..32
        Iconst@28..32 "1000"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

