crates/pg_syntax/tests/snapshots/postgres_regress/join@144.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t3 VALUES (6, 7);"
---
InsertStmt@0..29
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t3"
  Whitespace@14..15 " "
  SelectStmt@15..27
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..27
      AConst@23..24
        Iconst@23..24 "6"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..27
        Iconst@26..27 "7"
  Ascii41@27..28 ")"
  Ascii59@28..29 ";"

